---
title: KRAAK – Diagramme Entité-Relation (Supabase)
---
erDiagram

    %% ── Utilisateur & Participant ──────────────────────────

    app_user {
        uuid id PK "FK auth.users"
        text email UK
        user_role role
        text first_name
        text last_name
        text phone
        text preferred_contact_channel
        boolean is_active
        timestamptz created_at
        timestamptz updated_at
    }

    participant {
        uuid id PK
        uuid user_id FK, UK "UNIQUE → app_user.id"
        lifecycle_status lifecycle_status
        text reference_code
        text country
        text city
        text notes
        timestamptz created_at
        timestamptz updated_at
    }

    %% ── Programmes & Cohortes ──────────────────────────────

    program {
        uuid id PK
        text slug UK
        text title
        text summary
        text description
        publication_status status
        program_visibility visibility
        timestamptz created_at
        timestamptz updated_at
    }

    cohort {
        uuid id PK
        uuid program_id FK "→ program.id"
        text name
        text code
        cohort_status status
        date start_date
        date end_date
        integer capacity "CHECK > 0"
        timestamptz created_at
        timestamptz updated_at
    }

    %% ── Sessions ───────────────────────────────────────────

    session {
        uuid id PK
        uuid cohort_id FK "→ cohort.id"
        text title
        text description
        session_status status
        timestamptz starts_at
        timestamptz ends_at "CHECK > starts_at"
        location_type location_type
        text location_label
        text meeting_link
        uuid trainer_user_id FK "→ app_user.id (nullable)"
        timestamptz created_at
        timestamptz updated_at
    }

    %% ── Ressources ────────────────────────────────────────

    resource {
        uuid id PK
        uuid program_id FK "→ program.id (nullable)"
        uuid cohort_id FK "→ cohort.id (nullable)"
        text title
        text description
        resource_type resource_type
        text url
        text file_path
        publication_status status
        timestamptz published_at
        timestamptz created_at
        timestamptz updated_at
    }

    %% ── Annonces ──────────────────────────────────────────

    announcement {
        uuid id PK
        text title
        text body
        audience_type audience_type
        uuid program_id FK "→ program.id (nullable)"
        uuid cohort_id FK "→ cohort.id (nullable)"
        publication_status status
        timestamptz published_at
        uuid created_by_user_id FK "→ app_user.id (RESTRICT)"
        timestamptz created_at
        timestamptz updated_at
    }

    %% ── Inscriptions ─────────────────────────────────────

    enrollment {
        uuid id PK
        uuid participant_id FK "→ participant.id"
        uuid program_id FK "→ program.id"
        uuid cohort_id FK "→ cohort.id (nullable)"
        enrollment_status status
        timestamptz enrolled_at
        timestamptz completed_at
        timestamptz created_at
        timestamptz updated_at
    }

    %% ── Notifications ─────────────────────────────────────

    notification {
        uuid id PK
        uuid user_id FK "→ app_user.id"
        text title
        text body
        notification_type notification_type
        notification_channel channel
        boolean is_read
        timestamptz read_at
        text source_type
        uuid source_id
        timestamptz created_at
    }

    %% ── Demandes de support ───────────────────────────────

    support_request {
        uuid id PK
        uuid user_id FK "→ app_user.id"
        uuid participant_id FK "→ participant.id (nullable)"
        text subject
        text message
        support_request_status status
        support_category category
        uuid assigned_to_user_id FK "→ app_user.id (nullable)"
        timestamptz created_at
        timestamptz updated_at
    }

    %% ── Relations ─────────────────────────────────────────

    app_user        ||--o|  participant         : "possède un profil"
    app_user        ||--o{  notification        : "reçoit"
    app_user        ||--o{  support_request     : "crée"
    app_user        ||--o{  announcement        : "rédige"
    app_user        ||--o{  session             : "anime (trainer)"
    app_user        ||--o{  support_request     : "est assigné à"

    participant     ||--o{  enrollment          : "s'inscrit à"

    program         ||--o{  cohort              : "contient"
    program         ||--o{  enrollment          : "reçoit des inscriptions"
    program         ||--o{  resource            : "fournit"
    program         ||--o{  announcement        : "cible"

    cohort          ||--o{  session             : "planifie"
    cohort          ||--o{  enrollment          : "accueille"
    cohort          ||--o{  resource            : "fournit"
    cohort          ||--o{  announcement        : "cible"

    participant     ||--o{  support_request     : "ouvre"
